# nus

./: .env  AGENTS.md  README.md  README_zh.md  ai-manus.code-workspace  docker-compose-development.yml  docker-compose-example.yml
backend/: .env  Dockerfile  README.md  README_zh.md  pyproject.toml
backend/app/application/services/: agent_service.py
backend/app/core/: config.py
backend/app/domain/services/agents/: base.py  planner.py
backend/app/domain/services/flows/: plan_act.py
backend/app/domain/services/tools/: mcp.py
backend/app/domain/utils/: retry_utils.py
backend/app/interfaces/: dependencies.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md  configuration.md  quick_start.md  roadmap.md
docs/en/: README.md  configuration.md  quick_start.md  roadmap.md
frontend/: .env  package.json  vite.config.ts
sandbox/: Dockerfile  README.md  README_zh.md  pyproject.toml
